--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,12 +29,14 @@ jobs:
           cd frontend/muchachos
           npm run build
 
-      - name: Deploy to S3
-        uses: jakejarvis/s3-sync-action@master
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          args: --acl public-read
-        env:
-          SOURCE_DIR: "frontend/build"
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            aws-region: us-east-1
+
+      - name: Deploy to S3 bucket
+        run: aws s3 sync ./frontend/muchachos/build/ s3://${{ secrets.AWS_S3_BUCKET }} --delete
+      
+      
