--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Cypress Test Run
         uses: cypress-io/github-action@v6
         with:
-          run: cd frontend/muchachos
+          working-directory: ./frontend/muchachos
           build: npm run build
           start: npm start
           browser: chrome
