--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           install: false
           project: ./frontend/muchachos/
-          working-directory: ./frontend/
+          working-directory: ./frontend/muchachos/
           build: npm run build
           start: npm start
           browser: chrome
