--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           install: false
-          working-directory: ./frontend/
+          working-directory: ./frontend/muchachos/
           build: npm run build
           start: npm start
           browser: chrome
